--- a/MemeMe Virtual Tourist/Info.plist
+++ b/MemeMe Virtual Tourist/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>Privacy - Photo Library Usage Description.</key>
+	<string> $(PRODUCT_NAME) photo use</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string> $(PRODUCT_NAME) Share photo</string>
 </dict>
 </plist>
